# todo-app-pro

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  tasks.txt
.github/workflows/: build-test.yml  ci.yml
include/todoapp/: task.h
scripts/: build.sh  test.sh
src/: main.cpp  task.cpp  todo_manager.cpp
tests/: test_main.cpp
